<resources>
    <string name="app_name" translatable="false">Cliq</string>
    <string name="add_fab" translatable="false">add_fab</string>

    <string name="title_clients_list">Clients</string>
    <string name="title_client_form">Client Form</string>
    <string name="client_name">Name</string>
    <string name="client_last_name">Last name</string>
    <string name="save">save</string>
    <string name="title_booking_list">Bookings</string>
    <string name="title_booking_form">Booking Form</string>
    <string name="selecione_uma_data">Select the date and the time</string>
    <string name="title_nav_clients">Clients</string>
    <string name="title_nav_bookings">Bookings</string>
    <string name="client_address">Address</string>
    <string name="client_phone_number">Phone number</string>
    <string name="client_birthday">Birthday</string>
    <string name="arrow_back" translatable="false">arrow back</string>
    <string name="arrow_forward" translatable="false">arrow forward</string>
    <string name="today">TODAY</string>
    <string name="tomorrow">TOMORROW</string>
    <string name="yesterday">YESTERDAY</string>
    <string name="select_client">Select client</string>
    <string name="search_client">Search client</string>
</resources>