<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/clientListFragment">

    <fragment
        android:id="@+id/clientListFragment"
        android:name="com.rodcollab.clients.collections.ui.ClientListFragment"
        android:label="@string/title_clients_list"
        tools:layout="@layout/fragment_client_list">
        <action
            android:id="@id/action_clientList_to_clientForm"
            app:destination="@id/clientFormFragment" />
        <action
            android:id="@+id/action_clientList_to_bookingList"
            app:destination="@id/bookingListFragment" />
    </fragment>

    <fragment
        android:id="@+id/clientFormFragment"
        android:name="com.rodcollab.form.ClientFormFragment"
        android:label="@string/title_client_form"
        tools:layout="@layout/fragment_client_form" />

    <fragment
        android:id="@+id/bookingListFragment"
        android:name="com.rodcollab.cliq.features.bookings.collections.ui.BookingListFragment"
        android:label="@string/title_booking_list"
        tools:layout="@layout/fragment_booking_list">
        <action
            android:id="@id/action_bookingList_to_searchClientList"
            app:destination="@id/searchClientFragment"
            />
        <action
            android:id="@+id/action_bookingList_to_clientList"
            app:destination="@id/clientListFragment" />
    </fragment>

    <fragment
        android:id="@+id/searchClientFragment"
        android:name="com.rodcollab.cliq.features.bookings.form.ui.SearchClientFragment"
        android:label="@string/select_client">
        <action
            android:id="@id/action_searchClient_to_bookingForm"
            app:destination="@id/bookingFormFragment"
            />
        <action
            android:id="@+id/action_searchClient_to_clientForm"
            app:destination="@id/clientFormFragment"

            />
    </fragment>

    <fragment
        android:id="@+id/bookingFormFragment"
        android:name="com.rodcollab.cliq.features.bookings.form.ui.BookingFormFragment"
        android:label="@string/title_booking_form"
        tools:layout="@layout/fragment_booking_form">
    </fragment>

</navigation>